# sdr-to-discord

./: .gitignore  pyproject.toml
sdr_to_discord_embedded/: main.py
sdr_to_discord_embedded/controllers/: discord_bot_application.py
sdr_to_discord_embedded/utils/: dsp_utils.py
tests/: test_sdr_to_discord_embedded.py
